feat: 게시글 페이지 스켈레톤 코드 작성

--- a/posts/javascript/Javascript-Closure/content.mdx
+++ b/posts/javascript/Javascript-Closure/content.mdx
@@ -13,7 +13,7 @@ updatedAt: ""
 
   - 즉, 함수를 선언한 순간, 내부의 변수는 자신으로부터 가장 가까운 `Scope`부터 변수를 참조함
 
-  ```jsx showLineNumbers
+  ```js showLineNumbers
   var name = "zero";
   function log() {
     console.log(name); // zero -> 함수 선언시 전역 변수 name을 참조
