--- a/posts/develop/develop-dvh/content.mdx
+++ b/posts/develop/develop-dvh/content.mdx
@@ -13,7 +13,7 @@ updatedAt: ""
 
 WebKit에 명시된 일부 모바일 환경에서 뷰포트가 화면에 보이는 것보다 큰 vh의 버그이다.
 
-이전 프로젝트에서 모바일 chrome 환경에서 개발한 서비스의 메뉴 바가 chrome의 하단 바로 덮여 <br/>사용할 수 없었던 현상이 있었는데, 이것 또한 위의 버그로 인해 발생했던 버그이다.
+이전 프로젝트에서 모바일 chrome 환경에서 개발한 서비스의 메뉴 바가 chrome의 하단 바로 덮여 사용할 수 없었던 현상이 있었는데, 이것 또한 위의 버그로 인해 발생했던 버그이다.
 
 당시에는 script 코드로 현재 화면에 보이는 영역의 높이를 새로 계산하여 화면을 렌더링했다.
 
@@ -24,10 +24,10 @@ const setScreenSize = () => {
 };
 ```
 
-하지만, 스크롤로 chrome 하단 바가 사라지면 사라진 바의 자리가 흰색으로 아무것도 그려지지 않은 상태로 남아 있었고,<br/>데스크탑 chrome에서 개발자 도구의 반응형 모드로 화면의 크기를 동적으로 변경하면 처음 계산한 높이가 다시 계산되지 않아 원하는대로 동작하지 않았다.
+하지만, 스크롤로 chrome 하단 바가 사라지면 사라진 바의 자리가 흰색으로 아무것도 그려지지 않은 상태로 남아 있었고,데스크탑 chrome에서 개발자 도구의 반응형 모드로 화면의 크기를 동적으로 변경하면 처음 계산한 높이가 다시 계산되지 않아 원하는대로 동작하지 않았다.
 
-이 또한 **resize** event에 대해 listener를 등록하여 해결할 수 있다.<br/>
-하지만 style 파일과 script 파일을 모두 동시에 수정해야하는 불편함이 있었다.<br/>
+이 또한 **resize** event에 대해 listener를 등록하여 해결할 수 있다.
+하지만 style 파일과 script 파일을 모두 동시에 수정해야하는 불편함이 있었다.
 따라서 이러한 문제를 손쉽게 해결할 수 있는 요소를 발견하여 소개해보려고 한다.
 
 ## 새로운 Viewport!
