--- a/posts/life/2022/content.mdx
+++ b/posts/life/2022/content.mdx
@@ -6,43 +6,43 @@ tags: ["retrospect"]
 createdAt: "2023.01.31"
 ---
 
-2022년이 끝나고 부스트캠프의 다른 캠퍼분들이 작성한 회고들을 보았다.<br/>
+2022년이 끝나고 부스트캠프의 다른 캠퍼분들이 작성한 회고들을 보았다.
 쭉 읽어보면서 지난 일년간 무엇을 했는지 곱씹어보면서 나를 되돌아볼 수 있는 좋은 방법이라 생각하여 나도 한번 작성해보려고 마음 먹었다.
 
 ## 금융 치료
 
-1월말 살면서 처음으로 정말 큰 금액이 내 통장으로 들어왔다.<br/>
-그리고 '이것 때문에 이 회사를 다니는구나', '이게 금융 치료구나'라는 것을 몸으로 느꼈다.<br/>
-부모님이 평소에 원하셨던 건조기와 세탁기를 사드리고, 동생 대학 등록금도 내주었다.<br/>
-뭔가 엄청 뿌듯했고, 스트레스 받던 것들이 머릿속에서 사라졌다. 계속 고민하고 있던 퇴사까지도.<br/>
+1월말 살면서 처음으로 정말 큰 금액이 내 통장으로 들어왔다.
+그리고 '이것 때문에 이 회사를 다니는구나', '이게 금융 치료구나'라는 것을 몸으로 느꼈다.
+부모님이 평소에 원하셨던 건조기와 세탁기를 사드리고, 동생 대학 등록금도 내주었다.
+뭔가 엄청 뿌듯했고, 스트레스 받던 것들이 머릿속에서 사라졌다. 계속 고민하고 있던 퇴사까지도.
 이후 올해 연봉이 꽤 오를 것이라는 소문도 들렸고, 이 또한 실현되었다.
 
 하지만 회사 생활로 돌아가면 이런것들이 금방 잊혀졌고, 행복하지 않았다.
 
 > 요즘 힘드니? 매일 얼굴이 안좋네.
 
-어느날 부모님께 들었던 말이다.<br/>
-나름 티를 안낸다고 생각했는데, 얼굴에 다 드러났던 것 같다.<br/>
+어느날 부모님께 들었던 말이다.
+나름 티를 안낸다고 생각했는데, 얼굴에 다 드러났던 것 같다.
 이때부터 빠르게 많은 생각들을 해나갔다.
 
-> 내가 원래 이런 사람이었나?<br/>
-> 내가 무엇을 더 할 수 있을까?<br/>
-> 내가 같은 업무를 하면서 평생 살 수 있을까?<br/>
-> 여기서 어떻게 더 성장할 수 있을까?<br/>
-> 만약 경력을 쌓고 다른 회사를 간다면 어디를 갈 수 있을까?<br/>
-> 부서의 사업 목표를 정말 실현시킬 수 있을까?<br/>
+> 내가 원래 이런 사람이었나?
+> 내가 무엇을 더 할 수 있을까?
+> 내가 같은 업무를 하면서 평생 살 수 있을까?
+> 여기서 어떻게 더 성장할 수 있을까?
+> 만약 경력을 쌓고 다른 회사를 간다면 어디를 갈 수 있을까?
+> 부서의 사업 목표를 정말 실현시킬 수 있을까?
 > ...
 
-이때 돈이라는 것이 정말 무섭다는 것을 느꼈다.<br/>
-다 때려치고 싶은 힘든 현실에 안주할 수 있도록 잠시나마 해줬기 때문이다.<br/>
-하지만 이후, 내가 어떤 생각을 가지고 있는지 한번더 곱씹을 수 있게 해주었다.<br/>
-퇴사를 한다고 말했을 때, 주변에서 다들 돈도 많이 주는데 왜 좋은 회사를 퇴사하냐라는 의견이 지배적으로 많았다.<br/>
+이때 돈이라는 것이 정말 무섭다는 것을 느꼈다.
+다 때려치고 싶은 힘든 현실에 안주할 수 있도록 잠시나마 해줬기 때문이다.
+하지만 이후, 내가 어떤 생각을 가지고 있는지 한번더 곱씹을 수 있게 해주었다.
+퇴사를 한다고 말했을 때, 주변에서 다들 돈도 많이 주는데 왜 좋은 회사를 퇴사하냐라는 의견이 지배적으로 많았다.
 하지만 내 생각을 잘 전하며 사람들을 설득할 수 있었다.
 
 ## 퇴사
 
-회사를 다니면서 퇴사를 꽤 오랜 시간 고민했었다.<br/>
-2021년 여름에 첫 고민을 하면서 아직 1년 밖에 안지났고 시간이 약이겠거니 하는 마음을 가지고 회사를 다녔다.<br/>
+회사를 다니면서 퇴사를 꽤 오랜 시간 고민했었다.
+2021년 여름에 첫 고민을 하면서 아직 1년 밖에 안지났고 시간이 약이겠거니 하는 마음을 가지고 회사를 다녔다.
 하지만 결국 퇴사를 결정했다.
 
 이유는 다음과 같았다.
@@ -51,47 +51,47 @@ createdAt: "2023.01.31"
    회사를 오래 다니지는 않았지만, **내가 어떤 것을 더 할 수 있을까?**라는 생각이 꽤 많이 들었다.
 
 2. 갑작스런 TF팀 활동
-   나는 커널 관련 업무를 하기 위해 직접 지원하여 팀에 들어갔다.<br/>
-   그런데 기존 커널 업무에 대해 이해하고 프로세스를 익혀가는 도중에 유저 레벨에서 발생한 이슈를 대응하는 TF팀으로 잠시 활동하라는 통보를 받았다.<br/>
-   팀에서 필요로 하기 때문에 만들어진 팀이기 때문에 최선을 다했다.<br/>
-   하지만 이슈 재현 시나리오 찾기, 이슈 분석, 테스트 등의 업무들로 매일 같이 야근을 하고 주말 출근을 하면서 많은 생각을 하게 되었다.<br/>
-   **내가 기존 업무 프로세스를 빠르게 익히지 못해서 그런건가**라는 생각이 들면서 자책감이 생겼다.<br/>
+   나는 커널 관련 업무를 하기 위해 직접 지원하여 팀에 들어갔다.
+   그런데 기존 커널 업무에 대해 이해하고 프로세스를 익혀가는 도중에 유저 레벨에서 발생한 이슈를 대응하는 TF팀으로 잠시 활동하라는 통보를 받았다.
+   팀에서 필요로 하기 때문에 만들어진 팀이기 때문에 최선을 다했다.
+   하지만 이슈 재현 시나리오 찾기, 이슈 분석, 테스트 등의 업무들로 매일 같이 야근을 하고 주말 출근을 하면서 많은 생각을 하게 되었다.
+   **내가 기존 업무 프로세스를 빠르게 익히지 못해서 그런건가**라는 생각이 들면서 자책감이 생겼다.
    나중에 파트장님과 이야기를 해보니 이때 어쩔 수 없이 보내게 된거라 정말 미안했다고 말씀하셔서 자책감은 덜어낼 수 있었다.
 
 3. 미래에 대한 걱정
-   정말 큰 회사지만 능력있는 몇몇 인원에 의존해서 업무가 진행되는 경우가 많았고, 이 분들이 나간다면 어떻게 될까라는 걱정을 한 적이 있었다.<br/>
+   정말 큰 회사지만 능력있는 몇몇 인원에 의존해서 업무가 진행되는 경우가 많았고, 이 분들이 나간다면 어떻게 될까라는 걱정을 한 적이 있었다.
    퇴사 전, 한 수석님과 얘기를 하면서 미래를 걱정하는 사람들이 부서에 별로 없는 것 같다라는 말을 한 적이 있는데, 나 또한 그렇게 느꼈었다.
 
 4. 수석님들의 회사 탈출
-   물론 혼자서 업무를 잘 처리해야하는 것도 맞다.<br/>
-   하지만 회사에서는 협업을 하는 경우가 굉장히 많다.<br/>
-   시니어 분들이 나간다는 말은 즉, 업무 방향성이 잘못 되었을 때, 이에 대해 조언해주고 잡아줄 사람이 없어져 가는 말이기도 했기 때문이다.<br/>
+   물론 혼자서 업무를 잘 처리해야하는 것도 맞다.
+   하지만 회사에서는 협업을 하는 경우가 굉장히 많다.
+   시니어 분들이 나간다는 말은 즉, 업무 방향성이 잘못 되었을 때, 이에 대해 조언해주고 잡아줄 사람이 없어져 가는 말이기도 했기 때문이다.
    그래서인지 부스트캠프를 진행할 때, 마스터님께서 “잘못된 것에 대해 말해줄 사람이 없는 것이 가장 무섭다.”라고 해주신 말이 크게 공감이 되었었다.
 
-그때 당시 이보다 많은 이유들을 근거로 퇴사를 결정했었다.<br/>
-~~멘토님도 금방 퇴사하시고, 부서원들과 커피 마시는 것도 많이 못해보고 등등..~~<br/>
-물론 계속 다녀서 열심히 업무를 진행했다면, 더욱 전문성을 갖춰 관련 업종의 회사로 이직을 하거나, 시니어가 되었을 것이다.<br/>
+그때 당시 이보다 많은 이유들을 근거로 퇴사를 결정했었다.
+~~멘토님도 금방 퇴사하시고, 부서원들과 커피 마시는 것도 많이 못해보고 등등..~~
+물론 계속 다녀서 열심히 업무를 진행했다면, 더욱 전문성을 갖춰 관련 업종의 회사로 이직을 하거나, 시니어가 되었을 것이다.
 하지만 돈을 많이 받는다고 해도 행복하지 않을 것이고, 비슷한 업무가 반복되며 지루해져 갔을 것 같았다.
 
 그렇게 2022년 6월 퇴사를 하였다.
 
 ## 왜 웹일까?
 
-퇴사를 결심하고 어떤 것을 해볼까 고민하였다.<br/>
-애초에 내가 이전 회사에 들어가고 싶었던 이유 다음과 같았다.<br/>
+퇴사를 결심하고 어떤 것을 해볼까 고민하였다.
+애초에 내가 이전 회사에 들어가고 싶었던 이유 다음과 같았다.
 
 > 모바일 기기의 반도체 개발에 참여하고, 많은 사람들이 직접 기기를 사용하는 것을 보며 보람과 뿌듯함을 느끼는 것
 
-이와 마찬가지로 많은 사람들이 사용하고 좋은 서비스를 제공할 수 있는 환경이 무엇일까 생각을 했다.<br/>
-매일 사용하는 웹을 개발해보면 어떨까라는 생각을 하면서 자연스럽게 결정하게 되었다.<br/>
+이와 마찬가지로 많은 사람들이 사용하고 좋은 서비스를 제공할 수 있는 환경이 무엇일까 생각을 했다.
+매일 사용하는 웹을 개발해보면 어떨까라는 생각을 하면서 자연스럽게 결정하게 되었다.
 또한 부스트캠프를 경험한 친구가 적극적으로 너무 좋았다는 평을 했었기에 네이버 부스트캠프에 지원을 했다.
 
 ## 네이버 부스트캠프
 
-나름 **SW Cert. Pro**를 이전 회사에서 땄기도 했고, 백준도 열심히 풀었었기 때문에 나름 코딩테스트에 자신이 있었는데, 코딩테스트에서 많이 버벅거렸다.<br/>
+나름 **SW Cert. Pro**를 이전 회사에서 땄기도 했고, 백준도 열심히 풀었었기 때문에 나름 코딩테스트에 자신이 있었는데, 코딩테스트에서 많이 버벅거렸다.
 하지만 운이 좋았던 것인지, 아니면 최대한 코드를 깔끔하게 짜보려는 노력 때문이었는지 **부스트캠프 챌린지 과정**에 합격했다.
 
-부스트캠프는 나중에 내 인생을 바라보았을 때 큰 전환점일 것이다.<br/>
+부스트캠프는 나중에 내 인생을 바라보았을 때 큰 전환점일 것이다.
 대학생활 내내 가장 가고싶었던 전 직장을 그만두고 새로운 시작을 하기로 결정했기 때문이다.
 
 ### 힘들지만 재밌었던 Challenge
@@ -102,98 +102,98 @@ createdAt: "2023.01.31"
 
 그리고 주변에 부스트캠프를 수료한 지인들이 가장 많이 해준 말이었다.
 
-Day1 미션을 해결해 나가는데, 단순 코딩테스트 문제 같다는 생각을 했다.<br/>
-하지만 처음 사용한 **JavaScript**는 만만하지 않았다.<br/>
-이후, 챌린지 기간 동안 기상시간은 9시 30분, 취침시간은 3-4시가 되었다.<br/>
-아는 CS 지식도 꽤 나왔지만, 이를 직접 구현하는 것은 다른 이야기였기 때문이다.<br/>
+Day1 미션을 해결해 나가는데, 단순 코딩테스트 문제 같다는 생각을 했다.
+하지만 처음 사용한 **JavaScript**는 만만하지 않았다.
+이후, 챌린지 기간 동안 기상시간은 9시 30분, 취침시간은 3-4시가 되었다.
+아는 CS 지식도 꽤 나왔지만, 이를 직접 구현하는 것은 다른 이야기였기 때문이다.
 나는 밤을 잘 못새는 사람이라 초반에 적응이 굉장히 힘들었다.
 
-하지만 Notion을 처음 써보면서 정리 노트를 하나, 둘 채워가는데 이때마다 정말 뿌듯했다.<br/>
-그리고 부스트캠프에서 하는 모든 일들이 재미있어졌다.<br/>
+하지만 Notion을 처음 써보면서 정리 노트를 하나, 둘 채워가는데 이때마다 정말 뿌듯했다.
+그리고 부스트캠프에서 하는 모든 일들이 재미있어졌다.
 오죽하면 아침마다 다른 팀원의 코드를 보고 이해하는 것이 재미있어서 일찍 일어나서 코드를 봤다.
 
-나는 챌린지의 의미가 CS 지식을 습득하고, JavaScript와 친숙해지면서 어떻게 학습해 나갈지를 생각하고, 여러 캠퍼들과 만나며 좋은 것은 얻고, 안좋은 것은 버리면서 이를 다듬어가는 과정이라고 생각했다.<br/>
-그렇기 때문에 멤버십에서 떨어지더라도 내가 챌린지를 통해 얻은 것들을 토대로 내 방식대로 성장해 나가면 될 것이라고 생각했었다.<br/><strike>물론 멤버십은 정말 붙고 싶었다 😅</strike>
+나는 챌린지의 의미가 CS 지식을 습득하고, JavaScript와 친숙해지면서 어떻게 학습해 나갈지를 생각하고, 여러 캠퍼들과 만나며 좋은 것은 얻고, 안좋은 것은 버리면서 이를 다듬어가는 과정이라고 생각했다.
+그렇기 때문에 멤버십에서 떨어지더라도 내가 챌린지를 통해 얻은 것들을 토대로 내 방식대로 성장해 나가면 될 것이라고 생각했었다.<strike>물론 멤버십은 정말 붙고 싶었다 😅</strike>
 
 ### 다 잡으려다 놓힌게 많은 Membership
 
-멤버십에서는 여러 프로젝트를 통해 본격적인 웹 개발을 경험해보았다.<br/>
+멤버십에서는 여러 프로젝트를 통해 본격적인 웹 개발을 경험해보았다.
 하지만 처음 접했던 것이 너무 많았고, 머릿속으로 한꺼번에 들어오는게 너무 많다보니 뇌정지가 많이 왔다.
 
-멤버십 도중에 포기할까라는 생각이 처음 들었었다.<br/>
-남들은 다 프로젝트를 잘 완성해 가는데, 나는 왜이렇게 느릴까라는 생각이 계속 들었기 때문이다.<br/>
-좀처럼 멘탈이 잡히지 않았고, 운영진분들과 대화를 하는대도 부정적인 말들이 계속 튀어 나왔다.<br/>
+멤버십 도중에 포기할까라는 생각이 처음 들었었다.
+남들은 다 프로젝트를 잘 완성해 가는데, 나는 왜이렇게 느릴까라는 생각이 계속 들었기 때문이다.
+좀처럼 멘탈이 잡히지 않았고, 운영진분들과 대화를 하는대도 부정적인 말들이 계속 튀어 나왔다.
 그러던 중에 운영진분들과 마스터님께서 해주신 말씀들이 너무나 도움이 되었다.
 
-> 좀 내려놓아도 된다."<br/>
-> "어려운게 맞다."<br/>
+> 좀 내려놓아도 된다."
+> "어려운게 맞다."
 > "왜 굳이 남과 나를 비교하냐. 나는 나대로 성장하면 된다.
 
-라는 말씀을 해주셨기 때문이다.<br/>
+라는 말씀을 해주셨기 때문이다.
 이때부터 프로젝트의 완성보다는 학습에 더 집중을 했던 것 같다.
 
 > 줄건 줘!
 
-라는 마인드로 내가 현실적으로 어디까지 구현을 할 수 있을까를 고민하면서 계획을 세웠다.<br/>
-남들과 나를 비교하지 않았다보니 오히려 내가 어떤 것을 했는지 남들 앞에서 더 잘 말할 수 있었다.<br/>
+라는 마인드로 내가 현실적으로 어디까지 구현을 할 수 있을까를 고민하면서 계획을 세웠다.
+남들과 나를 비교하지 않았다보니 오히려 내가 어떤 것을 했는지 남들 앞에서 더 잘 말할 수 있었다.
 이때 나름 멘탈이 강하다고 생각했는데, 완전히 멘탈이 박살나서 거의 2주 넘게 부스트캠프 과정을 활용을 못한 것이 너무 아쉬웠다.
 
 ### Challenge 인연이 팀프로젝트로
 
 부스트캠프의 마지막 과정은 멤버십 팀프로젝트다.
-멘탈이 깨져 제대로 학습을 보다 많이 하지 못했다고 생각하였다.<br/>
-따라서 팀원을 직접 구하는건 민폐라는 생각으로 랜덤으로 팀을 배정 받아 열심히 하자는 생각이었다.<br/>
+멘탈이 깨져 제대로 학습을 보다 많이 하지 못했다고 생각하였다.
+따라서 팀원을 직접 구하는건 민폐라는 생각으로 랜덤으로 팀을 배정 받아 열심히 하자는 생각이었다.
 그러던 중, 챌린지 1주차에 같은 팀이였던 분께서 팀원으로 불러주셨고 정말 좋은 사람들을 만나게 되었다.
 
-팀프로젝트에서는 이전에 프로젝트를 진행하면서 프론트엔드 개발에 자연스럽게 손이 더 많이 가서 프론트엔드 개발을 맡았다.<br/>
+팀프로젝트에서는 이전에 프로젝트를 진행하면서 프론트엔드 개발에 자연스럽게 손이 더 많이 가서 프론트엔드 개발을 맡았다.
 주제를 정할 때는 모두가 힘들어했지만, 정해진 이후에는 정말 빠르게 계획이 완성되었다.
 
-구현도 많은 토론을 하면서 꽤 빠르게 진행되었던 것 같다.<br/>
+구현도 많은 토론을 하면서 꽤 빠르게 진행되었던 것 같다.
 토론을 하면서 언성이 조금 높아지는 일도 어느 정도 있었지만, 지금 생각해보면 재미있었고 다들 열정이 있었기 때문에 그런 것이라고 생각한다.
 
-하나 아쉬운 점은 내가 어떤 것을 이해하고 코드에 적용하는 것이 좀 느려 많은 시도를 못해본 것이다.<br/>
+하나 아쉬운 점은 내가 어떤 것을 이해하고 코드에 적용하는 것이 좀 느려 많은 시도를 못해본 것이다.
 **React**나 **TypeScript** 등을 처음 써보았기 때문에 그럴 수 있다라는 말도 들었지만, 너무 우물 안 개구리 같은 말이었던 것 같다.
 
-같이 프론트엔드 개발을 했던 팀원 분을 보면서 많은 생각을 할 수 있었던 것 같다.<br/>
-어떻게 하면 코드를 좀더 잘 작성할 수 있을까에 대한 고민한 흔적들이 정말 많았기 때문이다.<br/>
+같이 프론트엔드 개발을 했던 팀원 분을 보면서 많은 생각을 할 수 있었던 것 같다.
+어떻게 하면 코드를 좀더 잘 작성할 수 있을까에 대한 고민한 흔적들이 정말 많았기 때문이다.
 아마 나 때문에 답답했던 경우도 꽤나 있었을거라 생각하는데 그부분은 좀 죄송하다 🙇‍♂️
 
 ### 끝!
 
-부스트캠프가 끝이 나고, 채용 연계로 2개의 기업에서 연락이 왔다.<br/>
-하나는 내가 정말 가고 싶었던 회사.<br/>
+부스트캠프가 끝이 나고, 채용 연계로 2개의 기업에서 연락이 왔다.
+하나는 내가 정말 가고 싶었던 회사.
 다른 하나는 내가 팀프로젝트를 진행하며 멋있다고 생각했던 멘토님의 회사다.
 
-물론, 둘다 떨어졌다.<br/>
-그리고 아직 어떤 회사를 가기에는 내가 많이 부족하다고 생각했다.<br/>
-이런 마음이지만, 그래도 이전에 취준할 때 불합격한 기억들과 마찬가지로 꽤나 힘들었다.<br/>
+물론, 둘다 떨어졌다.
+그리고 아직 어떤 회사를 가기에는 내가 많이 부족하다고 생각했다.
+이런 마음이지만, 그래도 이전에 취준할 때 불합격한 기억들과 마찬가지로 꽤나 힘들었다.
 그래서인지 지난 1월에 집중을 잘 못했다.
 
-그래도 모든걸 내려놓고 퇴사 후에 정말 원했던 회사에서 기회를 얻어 성장하긴 했구나라는 생각을 했다.<br/>
-이 회사에서 봤던 과제 테스트는 앞으로 좋은 자료가 될 것 같다.<br/>
+그래도 모든걸 내려놓고 퇴사 후에 정말 원했던 회사에서 기회를 얻어 성장하긴 했구나라는 생각을 했다.
+이 회사에서 봤던 과제 테스트는 앞으로 좋은 자료가 될 것 같다.
 그리고 다시 도전할거다!
 
-그리고 멘토님의 회사는 멘토님께서 면접을 보고나서 밥을 먹는 자리에서 답변이 괜찮았던 것 같다라는 말을 해주셔서 사알짝 기대를 하긴 했다.<br/>
-하지만 면접을 보는 동안 잘 답변했다고 생각한 것도 있지만, 아직 부족한 점이 많구나 생각한 것이 더 많았기에 집에 돌아가자마자 복기를 하며 받았던 질문들을 정리하였다.<br/>
+그리고 멘토님의 회사는 멘토님께서 면접을 보고나서 밥을 먹는 자리에서 답변이 괜찮았던 것 같다라는 말을 해주셔서 사알짝 기대를 하긴 했다.
+하지만 면접을 보는 동안 잘 답변했다고 생각한 것도 있지만, 아직 부족한 점이 많구나 생각한 것이 더 많았기에 집에 돌아가자마자 복기를 하며 받았던 질문들을 정리하였다.
 이것 또한 마찬가지로 앞으로 볼 면접에 좋은 초석이 될 것이다.
 
 ## 2023년에는?
 
 올해 목표는 그리 많지 않다.
 
-> 1. 여행<br/>
-> 2. 운동<br/>
+> 1. 여행
+> 2. 운동
 > 3. 취업
 
-이전에 취업을 했을 때, 코로나로 인해 어느곳도 여행을 가지 못했다.<br/>
-입사 전에 코로나에 걸리면 입사 취소라는 말이 돌 정도였기 때문이다.<br/>
+이전에 취업을 했을 때, 코로나로 인해 어느곳도 여행을 가지 못했다.
+입사 전에 코로나에 걸리면 입사 취소라는 말이 돌 정도였기 때문이다.
 그래서 어디든 혼자라도 여행에 가보려고 한다.
 
-회사를 다니면서 운동은 정말 필수라고 느껴졌다.<br/>
-처음 운동을 할 때는 너무 힘들어서 가기 싫었지만, 점점 몸이 적응하면서 오히려 활력을 불어넣어 줬다.<br/>
+회사를 다니면서 운동은 정말 필수라고 느껴졌다.
+처음 운동을 할 때는 너무 힘들어서 가기 싫었지만, 점점 몸이 적응하면서 오히려 활력을 불어넣어 줬다.
 그리고 장시간 앉아있느라 살이 찌기 쉽고, 목, 허리가 정말 아픈데 운동을 하면 모든게 좀 나아졌었기 때문에 꼭 운동을 해야겠다고 생각했다.
 
-퇴사를 한 것도, 부스트캠프를 한 것도, 내가 하고 싶은 것을 하기 위해 한 것들이다.<br/>
-따라서 가고 싶은 회사들을 잘 정리하여 준비가 어느 정도 되었을 때, 취업하여 원하는 개발을 하고 싶다.<br/>
-물론, 경기가 안좋기도 하고, 내 능력이 부족해 올해 안에 못할 수도 있다.<br/>
-하지만 왜인지 모르겠지만 그리 초조할 것 같지는 않다.<br/><strike>그리고 하고 싶은 것을 하려면 돈이 있어야 하긴 하더라..</strike>
+퇴사를 한 것도, 부스트캠프를 한 것도, 내가 하고 싶은 것을 하기 위해 한 것들이다.
+따라서 가고 싶은 회사들을 잘 정리하여 준비가 어느 정도 되었을 때, 취업하여 원하는 개발을 하고 싶다.
+물론, 경기가 안좋기도 하고, 내 능력이 부족해 올해 안에 못할 수도 있다.
+하지만 왜인지 모르겠지만 그리 초조할 것 같지는 않다.<strike>그리고 하고 싶은 것을 하려면 돈이 있어야 하긴 하더라..</strike>
