--- a/posts/develop/tanstack-query-review/content.mdx
+++ b/posts/develop/tanstack-query-review/content.mdx
@@ -56,13 +56,13 @@ updatedAt: ""
 
 ![실제 사용시 줄어든 코드](/contents/tanstackQuery/tanstack-query-review/1.png)
 
-지훈님께서 React-Query를 사용하자는 말을 듣고, 조금씩 공부해가면서 PR에서 React-Query가 적용된 부분을 보았다.<br/>
-이전에는 서버로부터 데이터를 받아오는 코드들 때문에 `useEffect`가 무분별하게 사용되었다.<br/>
-그리고 그에 따른 `state`들도 많이 생겨났다.<br/>
+지훈님께서 React-Query를 사용하자는 말을 듣고, 조금씩 공부해가면서 PR에서 React-Query가 적용된 부분을 보았다.
+이전에는 서버로부터 데이터를 받아오는 코드들 때문에 `useEffect`가 무분별하게 사용되었다.
+그리고 그에 따른 `state`들도 많이 생겨났다.
 
-하지만 `React-Query`를 적용하고 나니, `useEffect`가 사용된 부분이 사라지면서 코드 또한 크게 줄어들었다.<br/>
-또한 `React-Query`에서 제공하는 많은 옵션들로 가독성 또한 크게 올라간 것을 확인할 수 있었다.<br/>
+하지만 `React-Query`를 적용하고 나니, `useEffect`가 사용된 부분이 사라지면서 코드 또한 크게 줄어들었다.
+또한 `React-Query`에서 제공하는 많은 옵션들로 가독성 또한 크게 올라간 것을 확인할 수 있었다.
 
-Loading 처리를 위해 `isLoading`을 `state`로 만들고, `data fetching`이 완료되면 `isLoading`을 `false`로 하는 등의 로직을 많이 사용하였는데, 이러한 부분이 if문 한 줄로 정리가 되었다.<br/>
-또 `delete, post, fetch` 등 서버 데이터의 변화가 생기는 경우에도 쿼리가 성공한 경우, `invalidateQueries`로 key에 대한 데이터를 업데이트하여 최신 데이터를 유지할 수 있는 로직도 굉장히 좋아보였다.<br/>
+Loading 처리를 위해 `isLoading`을 `state`로 만들고, `data fetching`이 완료되면 `isLoading`을 `false`로 하는 등의 로직을 많이 사용하였는데, 이러한 부분이 if문 한 줄로 정리가 되었다.
+또 `delete, post, fetch` 등 서버 데이터의 변화가 생기는 경우에도 쿼리가 성공한 경우, `invalidateQueries`로 key에 대한 데이터를 업데이트하여 최신 데이터를 유지할 수 있는 로직도 굉장히 좋아보였다.
 이 당시에는 구현에만 급급하여 제대로 사용하지 못했던 것 같아 추가로 학습해볼 계획이다.
