--- a/posts/javascript/Javascript-EventLoop/content.mdx
+++ b/posts/javascript/Javascript-EventLoop/content.mdx
@@ -9,32 +9,32 @@ updatedAt: ""
 
 ## JavaScript 병렬 처리
 
-앞에 작성한 글을 다시 상기하자면, JavaScript는 Single Thread 언어이다.<br/>
-하지만 **Event Loop**를 이용하여 **Multi Thread 인 것처럼** 동작할 수 있다.<br/>
+앞에 작성한 글을 다시 상기하자면, JavaScript는 Single Thread 언어이다.
+하지만 **Event Loop**를 이용하여 **Multi Thread 인 것처럼** 동작할 수 있다.
 
 ### Javascript Engine
 
-브라우저마다 다른 엔진을 가지며 `webkit, v8` 등이 존재한다.<br/>
-자바스크립트 엔진은 <u>자바스크립트 코드를 해석하고 실행하는 인터프리터</u>이다.<br/>
+브라우저마다 다른 엔진을 가지며 `webkit, v8` 등이 존재한다.
+자바스크립트 엔진은 <u>자바스크립트 코드를 해석하고 실행하는 인터프리터</u>이다.
 엔진은 크게 **Heap**과 **Call Stack**로 나뉘어진다.
-Heap에서는 메모리 할당이 일어나며 변수, 객체 등이 저장되는 창고이다.<br/>
+Heap에서는 메모리 할당이 일어나며 변수, 객체 등이 저장되는 창고이다.
 
 ### Call Stack
 
-Call Stack은 함수가 실행되는 순서대로 쌓이는 스택으로 함수 실행시 push, 종료시 pop된다.<br/>
+Call Stack은 함수가 실행되는 순서대로 쌓이는 스택으로 함수 실행시 push, 종료시 pop된다.
 
 ### Event Loop
 
-Event Loop는 Callback(task) Queue에서 Callback 함수를 꺼내서 동작시킨다.<br/>
+Event Loop는 Callback(task) Queue에서 Callback 함수를 꺼내서 동작시킨다.
 먼저, Event Loop에서는 이벤트 발생시 호출되는 Callback 함수들을 Callback Queue에 전달한다.
-그리고 Call Stack과 Callback Queue를 모니터링하며 Call Stack이 **비었을 때**, Callback queue의 callback 함수들을 Call Stack에 넣어준다.<br/>
+그리고 Call Stack과 Callback Queue를 모니터링하며 Call Stack이 **비었을 때**, Callback queue의 callback 함수들을 Call Stack에 넣어준다.
 
 ## libuv
 
-**libuv**는 NodeJS의 Event Loop에 존재하는 라이브러리로, 비동기 입출력, 이벤트 기반에 초점을 맞춘 라이브러리이다.<br/>
-전통적으로 IO 처리는 요청마다 새로운 thread를 사용하지만, libuv는 **비동기, non-blocking**으로 처리한다.<br/>
-이벤트를 모니터링하며 **node.js가 libuv 위에서 동작**한다.<br/>
-node.js의 core는 `v8 api, libuv api`로 구현되어 있다.<br/>
+**libuv**는 NodeJS의 Event Loop에 존재하는 라이브러리로, 비동기 입출력, 이벤트 기반에 초점을 맞춘 라이브러리이다.
+전통적으로 IO 처리는 요청마다 새로운 thread를 사용하지만, libuv는 **비동기, non-blocking**으로 처리한다.
+이벤트를 모니터링하며 **node.js가 libuv 위에서 동작**한다.
+node.js의 core는 `v8 api, libuv api`로 구현되어 있다.
 
 ### 동작
 
