--- a/posts/cicd/GitHub-Actions-application-and-improvement/content.mdx
+++ b/posts/cicd/GitHub-Actions-application-and-improvement/content.mdx
@@ -150,11 +150,9 @@ jobs:
         run: yarn build
 ```
 
-<br />
-
-이제 이전 결과와 비교해보자!<br />
-우선 시간이 <u>1분 33초</u>로, 3분 39초에서 **약 2분, 즉 58% 정도** 줄어들었다.<br />
-물론, 두 job의 의존성이 모두 캐싱되어있는 상황이지만, 의존성이 바뀌더라도 약 1분 정도의 시간이 추가될 것이라 예상한다.<br />
+이제 이전 결과와 비교해보자!
+우선 시간이 <u>1분 33초</u>로, 3분 39초에서 **약 2분, 즉 58% 정도** 줄어들었다.
+물론, 두 job의 의존성이 모두 캐싱되어있는 상황이지만, 의존성이 바뀌더라도 약 1분 정도의 시간이 추가될 것이라 예상한다.
 그렇더라도 빌드 테스트에서 약 1분이 줄어들기 때문에 충분히 개선할 가치가 있다고 생각한다.
 
 ![github-actions-v2-1](/contents/cicd/GitHub-Actions-application-and-improvement/4.png)
