refactor: 게시글 파일 구조 변경

--- a/public/posts/develop/develop-dvh.mdx
+++ b/public/posts/develop/develop-dvh.mdx
@@ -2,9 +2,8 @@
 slug: develop-dvh
 title: "dvh?"
 description: "vh에 버그가 있다고?"
-tags: ["develop"]
+tags: ["css"]
 createdAt: "2023.09.29"
-updatedAt: ""
 ---
 
 ## **[Bug 141832](https://bugs.webkit.org/show_bug.cgi?id=141832)**
@@ -34,7 +33,7 @@ const setScreenSize = () => {
 
 📌 Ref. https://ishadeed.com/article/new-viewport-units/
 
-![dvh](/contents/develop/develop-dvh/1.png)
+![dvh](/post-images/develop/develop-dvh/1.png)
 
 ### dvh
 
@@ -46,7 +45,7 @@ dvh는 현재 보여지는 뷰포트의 높이를 **동적**으로 가져오는 
 
 물론, 뷰포트에 변화가 생기면서 콘텐츠의 크기가 재조정될 수 있기 때문에 편의성과 성능 면에서 비용이 발생할 수 있다.
 
-![svh](/contents/develop/develop-dvh/2.png)
+![svh](/post-images/develop/develop-dvh/2.png)
 
 ### svh
 
@@ -56,7 +55,7 @@ svh는 현재 보여지는 뷰포트의 높이중 가장 작은 높이를 가져
 
 즉, 위 그림에서 볼 수 있듯이 브라우저에서 제공하는 인터페이스를 제외한 화면의 높이이다.
 
-![lvh](/contents/develop/develop-dvh/3.png)
+![lvh](/post-images/develop/develop-dvh/3.png)
 
 ### lvh
 
