feat: 게시글의 태그 리스트 추가

--- a/public/posts/develop/GitHub-Actions-application-and-improvement.mdx
+++ b/public/posts/develop/GitHub-Actions-application-and-improvement.mdx
@@ -2,7 +2,7 @@
 slug: GitHub-Actions-application-and-improvement
 title: "GitHub Actions 적용기"
 description: "GitHub Actions를 적용하고 caching을 통한 개선"
-tags: ["cicd"]
+tags: ["cicd", 'github-actions']
 createdAt: "2023.10.07"
 ---
 
