--- a/public/posts/develop/develop-dvh.mdx
+++ b/public/posts/develop/develop-dvh.mdx
@@ -6,7 +6,7 @@ tags: ["css"]
 createdAt: "2023.09.29"
 ---
 
-## **[Bug 141832](https://bugs.webkit.org/show_bug.cgi?id=141832)**
+## [Bug 141832](https://bugs.webkit.org/show_bug.cgi?id=141832)
 
 > **Viewport height is taller than the visible part of the document in some mobile browsers**
 
