--- a/public/posts/develop/Javascript-Review.mdx
+++ b/public/posts/develop/Javascript-Review.mdx
@@ -1,7 +1,7 @@
 ---
 slug: Javascript-Review
-title: "C 사용자의 JavaScript 사용 후기"
-description: "처음 사용한 JavaScript의 느낌"
+title: "JavaScript 첫 사용 후기"
+description: "C언어 유저가 JavaScript를 사용하며 느낀 것들"
 tags: ["javascript"]
 createdAt: "2023.02.03"
 ---
