--- a/public/posts/life/Blog-Start.mdx
+++ b/public/posts/life/Blog-Start.mdx
@@ -65,5 +65,14 @@ createdAt: "2025.02.22"
 현재는 뭐가 많지 않지만 점차 더 만들어갈 예정이다. (다크모드, 인터랙션 등등...)
 이에 대한 내용도 `블로그 제작기`라는 이름으로 블로그 포스트로 다룰 예정이다.
 
-블로그를 만들면서 마크다운 대응도 그렇고 생각지 못한 곳에서 꽤나 많은 시간이 들어갔는데, 직접 만들고 나니 은근 뿌듯하기도 하고 애착이 가서 더 열심히 글을 쓸 수 있을 것 같다.
+## 마치며
+
+개발도 개발이지만 블로그 이름은 뭐라고 지을까 고민하다 `별 세개짜리 개발자`라고 지어보았다.
+그 이유는 먼저 정말 단순하게 삼성을 다니다 퇴사해서 **별 세개**를 떠올렸고, 정말 너무나 가고 싶었던 회사였지만 생각과 달랐던 면도 많았기에 별 세개**짜리**라고 표현해보았다.
+이걸 시각적으로 어떻게 표현해볼까 하다가, 블로그 하단의 프로필 카드를 보면 마지막 별이 깜빡거리는데, 전구가 수명이 다해 불이 깜빡거리는 느낌으로 표현해보았다.
+또 게시글 커버 이미지의 색상은 [팬톤페인트](https://www.pantonepaint.co.kr/)에서 올해의 컬러를 확인할 수 있는데 연도별 그 해의 컬러를 적용해보았다.
+
+이렇듯 블로그를 만들면서 생각지 못한 곳에서 꽤나 많은 시간이 들어갔다. ~~특히 마크다운...~~
+그래서인지 만들고 나니 은근 뿌듯하기도 하고 애착이 가서 더 열심히 글을 쓸 수 있을 것 같다.
+예전에 썼던 글이나 노션에 정리했던 글들 또한 다시 다듬어 줄글로 올려보려고도 한다.
 정말 오랜만에 쓰는 글이라 부족한 부분이 많을 수 있지만, 앞으로 더 노력해서 완성도 높은 글을 쓰기 위해 노력해보려 한다.
