--- a/public/posts/develop/SVG-wave-visualization.mdx
+++ b/public/posts/develop/SVG-wave-visualization.mdx
@@ -1,7 +1,7 @@
 ---
 slug: SVG-wave-visualization
-title: "SVG를 활용한 물결 컴포넌트 구현"
-description: "디프만 15기에서 진행한 시각화 컴포넌트"
+title: "SVG를 활용한 물결 모양 시각화 컴포넌트 구현"
+description: "처음 직접 다뤄본 SVG"
 tags: ["SVG"]
 createdAt: "2025.02.20"
 ---
