docs: 게시글 본문 수정

--- a/public/posts/develop/undefined-vs-null-vs-nan.mdx
+++ b/public/posts/develop/undefined-vs-null-vs-nan.mdx
@@ -6,7 +6,7 @@ tags: ["javascript"]
 createdAt: "2024.04.10"
 ---
 
-디프만을 하기 전에 토스뱅크 면접을 보면서 `undefined`와 `null`의 차이에 대한 면접 질문을 받았었다.
+디프만을 하기 전에 정말 가고 싶었던 회사의 면접을 보면서 `undefined`와 `null`의 차이에 대한 면접 질문을 받았었다.
 
 정말 상상도 못했던 질문이라 당황하였지만, 다음과 같이 답변하였다.
 
