--- a/public/posts/develop/common-components.mdx
+++ b/public/posts/develop/common-components.mdx
@@ -326,11 +326,66 @@ export const classMerge = (...args: (string | undefined)[]) =>
   args.filter(Boolean).join(" ");
 ```
 
+## 느낀 점
+
+이전에도 비슷하게 tailwindCSS의 theme과 class-variance-authority(CVA) 라이브러리를 함께 사용하거나 PandaCSS를 통해 비슷한 작업들을 해보았었다.
+하지만 이때마다 각자의 장단점이 있다고 생각한다.
+
+먼저, 가장 만족도가 높았던 것은`PandaCSS`였다.
+
+vanilla-extract와 동일한 zero-runtime CSS in JS이고, 기본적으로 CVA와 스타일 병합 함수인 cx 함수까지 함께 제공되어 상당히 편리하게 사용했었다.
+
+그리고 vanilla-extract와 tailwindCSS + CVA 라이브러리는 내겐 불편한 점이 명확했던 것 같다.
+
+먼저,`vanilla-extract`는 위에 언급한대로 무조건 `[filename].css.ts` 파일을 만들어 스타일을 관리해야 한다는 점이 조금 불편했다.
+
+그리고 `tailwindCSS + CVA 라이브러리`는 스타일이 많아질 경우 className으로 전달되는 문자열이 길어져 스타일 관리가 편하지만은 않다는 점이 내겐 와닿지 않았던 것 같다.
+아래는 이전에 했던 프로젝트에서 적용했던 공통 버튼 컴포넌트의 스타일링 코드다.
+`tailwindCSS`가 엄청 익숙하지 않아서 그런건진 몰라도, 명확한 css 속성 이름에 값을 넣는 것이 가독성 측면과 수정에 대한 관리 측면에서 좀더 낫게 느껴졌다.
+
+```ts
+const buttonVariants = cva(
+  'inline-flex gap-[6px] items-center justify-center word-break:keep-all disabled:pointer-events-nonedisabled:pointer-events-none disabled:opacity-30 transition-colors duration-200 font-semibold',
+  {
+    variants: {
+      variant: {
+        heavy: 'bg-gray-60 text-white hover:bg-gray-70',
+        blue: 'bg-blue-10 text-blue-30',
+        tertiary: 'bg-gray-20 text-gray-40',
+        issue: 'bg-red-20 text-red-50',
+      },
+      rounded: {
+        none: 'rounded-none',
+        sm: 'rounded-sm',
+        md: 'rounded-md',
+        lg: 'rounded-lg',
+        xl: 'rounded-xl',
+      },
+      width: {
+        full: 'w-full',
+      },
+      height: {
+        h60: 'h-[60px]',
+        h44: 'h-[44px]',
+        h12: 'h-[12px]',
+      },
+    },
+    defaultVariants: {
+      variant: 'heavy',
+      rounded: 'lg',
+      width: 'full',
+      height: 'h60',
+    },
+  },
+);
+```
+
+
 ## 마무리
 
 이후 나머지 공통 컴포넌트들도 이러한 틀을 기반으로 제작되었다.
 
-이전까지는 다른 UI 라이브러리들을 찾아볼 생각을 못했었는데, 이미 잘만들어둔 라이브러리들이다보니 공통 컴포넌트들을 구현하며 얻을 수 있는 인사이트들이 있었던 것 같다.
+그리고 이전까지는 다른 UI 라이브러리들을 찾아볼 생각을 못했었는데, 이미 잘만들어둔 라이브러리들이다보니 공통 컴포넌트들을 구현하며 얻을 수 있는 인사이트들이 있었던 것 같다.
 
 위에서 말한 `as` 속성을 통한 HTML 태그 활용 패턴 뿐만 아니라, variants 내부 속성들이나 컴포넌트의 네이밍이 어려울 때, 찾아보면 적절한 네이밍도 존재했다.
 
