refactor: 블로그 구조 변경

--- a/public/posts/blog-1.mdx
+++ b/public/posts/blog-1.mdx
@@ -84,11 +84,11 @@ export function getAllPosts(): Post[] {
 
 먼저, `getAllPosts`를 통해 메인 페이지에서 모든 글들의 썸네일과 날짜, 제목 등의 간단한 정보들을 보여준다.
 
-![blog-starter 1](/post-images/develop/blog-1/1.png)
+![blog-starter 1](/post-images/blog-1/1.png)
 
 그리고 위의 게시글들 중 하나를 클릭했을때, `getPostBySlug` 함수를 통해 /posts/[slug]의 경로에서 해당 게시글의 대한 정보를 파싱하여 게시글 정보와 본문을 보여준다.
 
-![blog-starter 2](/post-images/develop/blog-1/2.png)
+![blog-starter 2](/post-images/blog-1/2.png)
 
 ### 이렇게 만들어보자.
 
