--- a/public/posts/pn-rule.mdx
+++ b/public/posts/pn-rule.mdx
@@ -48,8 +48,8 @@ createdAt: "2025.03.29"
 <br/>
 아래는 코드 리뷰에 반영된 모습이다.
 
-![](/post-images/develop/pn-rule/1.png)
-![](/post-images/develop/pn-rule/2.png)
+![](/post-images/pn-rule/1.png)
+![](/post-images/pn-rule/2.png)
 
 ### 느낀 점 💡
 
@@ -121,7 +121,7 @@ jobs:
 수정이 발생하면 코멘트 전체를 다시 보는 것이 아닌, 수정이 발생한 코멘트만을 다시 검증하기 때문이다.
 그래도 의견 강도가 변화할 케이스는 크지 않다고 판단하여 더이상의 대응은 처리하지 않기로 하였다.
 
-![](/post-images/develop/pn-rule/3.png)
+![](/post-images/pn-rule/3.png)
 
 workflow를 적용한 결과, 위처럼 PR에 코멘트를 남기면 아래와 같이 라벨링이 자동으로 달리게 되었다.
 이를 통해 리뷰를 확인하기 전, 어떤 종류의 의견들이 달렸는지 미리 파악이 가능하였다.
