docs: 블로그 제작기 제목 변경

--- a/public/posts/blog-1.mdx
+++ b/public/posts/blog-1.mdx
@@ -1,6 +1,6 @@
 ---
 slug: blog-1
-title: "블로그 제작기 1: NextJS blog-starter"
+title: "NextJS 블로그 만들기 1: NextJS blog-starter"
 description: "직접 블로그를 만들어 보았습니다."
 tags: ["blog"]
 createdAt: "2025.03.23"
