--- a/public/posts/blog-2.mdx
+++ b/public/posts/blog-2.mdx
@@ -1,6 +1,6 @@
 ---
 slug: blog-2
-title: "블로그 제작기 2: 목차(TOC)"
+title: "NextJS 블로그 만들기 2: 목차(TOC)"
 description: "with. rehype-slug"
 tags: ["blog"]
 createdAt: "2025.06.11"
