docs: 누락된 게시글 태그 추가

--- a/public/posts/blog-1.mdx
+++ b/public/posts/blog-1.mdx
@@ -2,7 +2,7 @@
 slug: blog-1
 title: "NextJS 블로그 만들기 1: NextJS blog-starter"
 description: "직접 블로그를 만들어 보았습니다."
-tags: ["blog"]
+tags: ["nextjs", "blog"]
 createdAt: "2025.03.23"
 updatedAt: "2025.06.10"
 ---
