--- a/public/posts/blog-2.mdx
+++ b/public/posts/blog-2.mdx
@@ -2,7 +2,7 @@
 slug: blog-2
 title: "NextJS 블로그 만들기 2: 목차(TOC)"
 description: "with. rehype-slug"
-tags: ["blog"]
+tags: ["nextjs", "blog"]
 createdAt: "2025.06.11"
 ---
 
