--- a/public/posts/blog-3.mdx
+++ b/public/posts/blog-3.mdx
@@ -2,7 +2,7 @@
 slug: blog-3
 title: "NextJS 블로그 만들기 3: 다크 모드"
 description: "PandaCSS Multi-Themes로 다크 모드 구현하기"
-tags: ["blog"]
+tags: ["nextjs", "blog"]
 createdAt: "2025.06.17"
 ---
 
