--- a/public/posts/svg-wave-visualization.mdx
+++ b/public/posts/svg-wave-visualization.mdx
@@ -2,7 +2,7 @@
 slug: svg-wave-visualization
 title: "SVG를 활용한 물결 모양 시각화 컴포넌트 구현"
 description: "처음 직접 다뤄본 SVG"
-tags: ["SVG"]
+tags: ["react", "SVG"]
 createdAt: "2025.02.20"
 ---
 
