chore: 게시글 태그 소문자로 수정

--- a/public/posts/structural-subtyping.mdx
+++ b/public/posts/structural-subtyping.mdx
@@ -2,7 +2,7 @@
 slug: structural-subtyping
 title: "구조적 서브타이핑이란?"
 description: "타입 시스템이 객체의 속성을 확인하는 방식"
-tags: ["TypeScript"]
+tags: ["typescript"]
 createdAt: "2024.06.03"
 ---
 
