docs: Pn룰 도입기 제목 변경

--- a/public/posts/pn-rule.mdx
+++ b/public/posts/pn-rule.mdx
@@ -1,6 +1,6 @@
 ---
 slug: pn-rule
-title: "사이드 프로젝트 코드 리뷰에 Pn룰 도입하기"
+title: "사이드 프로젝트 코드 리뷰에 Pn룰 맛보기"
 description: "뱅크샐러드의 코드 리뷰 문화인 Pn룰을 도입해보았습니다."
 tags: ["code-review", "github-actions"]
 createdAt: "2025.03.29"
