--- a/public/posts/chrome-devtools-mcp.mdx
+++ b/public/posts/chrome-devtools-mcp.mdx
@@ -208,6 +208,10 @@ Claude Code는 MCP 서버로부터 받은 성능 메트릭을 분석합니다.
 
 ## 마무리
 
-Chrome DevTools MCP를 실험하면서 **AI가 코드를 작성하는 것을 넘어 AI가 직접 브라우저에서 검증까지 수행하는 것**이 가능하다는 것을 간략하게나마 확인할 수 있었습니다.
+운이 좋게도 회사에서 시범적으로 Claude Code를 도입해 다양하게 사용해보고, 개념적으로만 보던 MCP를 직접 활용해볼 수 있었던 좋은 경험이였습니다.
+
+이를 통해 Playwright MCP와 비슷하지만 Chrome DevTools MCP를 통해서도 **AI가 코드를 작성하는 것을 넘어 AI가 직접 브라우저에서 검증까지 수행하는 것**이 가능하다는 것을 간략하게나마 확인할 수 있었습니다.
 
 물론 아직 모든 케이스를 완벽하게 커버하지는 못하지만, **반복적인 검증 작업을 자동화**하고 **1차 품질 체크를 AI에게 맡길 수 있다**는 가능성을 확인한 것만으로도 충분히 의미 있는 실험이었던 것 같습니다.
+
+이외에도 GitLab, GitHub MCP 등을 통해 PR, MR을 자동으로 생성하거나 테스트하는 플로우도 추가하는 등 다양한 활용도를 고민해보면 더 좋지 않을까 생각해보게 되었습니다 :)
